test/classes/lydia/inherit-from-not-visible.good
inherit-from-not-visible.chpl:8: error: unable to find parent class named 'Foo'
